--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  height:100vh;
+  flex-direction: column;
+  
+}
+.output{
+  outline: none;
+  border: none;
+  width: 320px;
+  height: 70px;
+  font-size: 32px;
+  padding: 2px 10px;
+  background-color: black;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
   color: white;
+  text-align: right;
 }
-
-.App-link {
-  color: #61dafb;
+button{
+  width:85px;
+  height: 90px;
+  font-size: 26px;
+  cursor: pointer;
+  border:none;
+  border-top: 1px solid #666;
+  border-right: 1px solid #666;
 }
+.operator{
+  border-right: none;
+  background-color: orange;
+}
+.fun-key{
+  background-color: rgb(171, 137, 171);
+}
+.digit:hover{
+  background-color: lightgray;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.operator:hover{
+  background-color: rgb(197, 228, 200);
 }
